workspace_1.16.1/.metadata/.plugins/org.eclipse.cdt.ui/Lab2Serial_SimpleIO_SerialCommUART.build.log
18:51:28 **** Incremental Build of configuration Debug for project Lab2Serial_SimpleIO_SerialCommUART ****
make -j32 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:103:41: warning: pointer targets in passing argument 2 of 'HAL_UART_Receive' differ in signedness [-Wpointer-sign]
  103 |           if (HAL_UART_Receive(&huart2, t , 1, 1000) == HAL_OK) {
      |                                         ^
      |                                         |
      |                                         char *
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:411,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:746:72: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'char *'
  746 | HAL_StatusTypeDef HAL_UART_Receive(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                               ~~~~~~~~~^~~~~
../Core/Src/main.c:104:46: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  104 |                   HAL_UART_Transmit(&huart2, t, 1, 1000);
      |                                              ^
      |                                              |
      |                                              char *
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h:745:79: note: expected 'const uint8_t *' {aka 'const unsigned char *'} but argument is of type 'char *'
  745 | HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, const uint8_t *pData, uint16_t Size, uint32_t Timeout);
      |                                                                ~~~~~~~~~~~~~~~^~~~~
../Core/Src/main.c:180:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  180 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:213:13: error: invalid storage class for function 'MX_GPIO_Init'
  213 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_USART2_UART_Init' used but never defined
   52 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:253:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  253 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:213:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  213 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:180:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  180 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:133:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  133 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j32 all" terminated with exit code 2. Build might be incomplete.

18:51:28 Build Failed. 4 errors, 8 warnings. (took 341ms)

